# batteryDAT

./: .flake8  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: check-links.yml  ci.yml  pre-commit_autoupdate.yml
batteryDAT/: __init__.py  __main__.py  analysis_functions.py  cell_data.py  constants.py  dma_functions.py  parsers.py
tests/: __init__.py  test_batteryDAT.py  test_myproject.py
